--- a/.github/workflows/nogo.yml
+++ b/.github/workflows/nogo.yml
@@ -1,4 +1,4 @@
-name: "[Bazel] Build & Lint"
+name: nogo
 on:
   push:
     branches:
@@ -15,8 +15,7 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           show-progress: false
           fetch-depth: 1
@@ -30,12 +29,10 @@ jobs:
           # Share repository cache between workflows.
           repository-cache: true
 
-      - name: Setup Bazel
-        run: |
+      - run: |
           cat <<EOF > ~/.bazelrc
           build --remote_header=x-buildbuddy-api-key=${{ secrets.BUILDBUDDY_API_KEY }}
           build --build_metadata=ROLE=CI
           EOF
 
-      - name: Build
-        run: make nogo 
+      - run: make nogo 
